add documentation for notices
